--- a/css/style.css
+++ b/css/style.css
@@ -277,6 +277,12 @@ body {
   margin-top: 8px;
   text-transform: capitalize;
   font-weight: 500;
+  transition: color 250ms ease-in-out;
+  cursor: pointer;
+}
+
+.recomend-box h3:hover {
+  color: var(--action);
 }
 
 .rec-bookmark {
@@ -288,7 +294,9 @@ body {
  z-index: 99;
  top: 16px;
  right: 16px;
+ cursor: pointer;
 }
+
 
 @media (min-width: 600px) {
   .recomend-grid {
@@ -317,4 +325,9 @@ footer p {
   text-align: center;
   color: rgba(255, 255, 255, 0.5);
   margin-bottom: 15px;
+}
+
+
+h3:hover {
+  color: var(--action);
 }
